# laser_bcs

./: .gitignore  CMakeLists.txt  README.md
2d/: .gitignore  CMakeLists.txt
2d/interfaces/: epoch2d.f90
2d/src/: domain_param.cpp  global.cpp  laser_bcs.cpp  laser_param.cpp  main.cpp
2d/src/inc/: domain_param.hpp  global.hpp  laser_bcs.hpp  laser_param.hpp
3d/: .gitignore  CMakeLists.txt
3d/cmake/: FindFFTW.cmake
3d/interfaces/: epoch3d.f90
3d/src/: laser_bcs.cpp  laser_param.cpp  main.cpp
3d/src/inc/: domain_param.hpp  global.hpp  laser_param.hpp
cmake/: FindFFTW.cmake  MergeStaticLibs.cmake
interfaces/: epoch2d.F90  epoch2d.f90  epoch3d.F90  epoch3d.f90
src/: domain_param.cpp  global.cpp  laser_bcs.cpp  laser_param.cpp  lbcs_2d.cpp  lbcs_3d.cpp  main.cpp  param_2d.cpp  param_3d.cpp
src/inc/: global.hpp  laser_bcs.hpp  laser_param.hpp  lbcs_2d.hpp  lbcs_3d.hpp  param_2d.hpp  param_3d.hpp
